# smart_web_screenshot

./: .gitignore  README.md  pyproject.toml  setup.py  smart_web_screenshot.egg-info-PKG-INFO
smart_web_screenshot/: __init__.py  smart_screenshot.py
smart_web_screenshot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
